# circulant-rs

./: .claudeignore  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.claude/experts/: code_expert.md  doc_expert.md  math_expert.md  orchestrator.md  plan_expert.md  test_expert.md
.github/workflows/: ci.yml
benches/: fft_multiply.rs  tensor_benchmark.rs
benches/comparative/: scaling_benchmark.rs
benchmarks/python/: compare_circulant.py
docs/: API_TREE.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_PROPOSAL.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_GRAPH.md  OVERVIEW.md  TESTING_GUIDE.md  USER_GUIDE.md  WHITEPAPER.md  math.md
docs/archive/: AGENT_PROTOCOL.md  DOCUMENTATION_GUIDE.md  DOC_POLICY.md  WORKFLOW_GUIDE.md  WORKTREE_GUIDE.md  claude_framework.md
docs/events/: .gitkeep  DE-2026-001.md  DE-2026-002.md
docs/internal/: NOTES.md  RELEASE_GUIDE.md  TASKS.md
docs/templates/: DE_TEMPLATE.md
examples/: continuous_walk.rs  edge_detection.rs  image_blur.rs  quantum_walk_1d.rs  quantum_walk_2d.rs  tensor_3d.rs  tensor_nd.rs  walk_visualization.rs
src/: error.rs  lib.rs  prelude.rs
src/core/: block_circulant.rs  circulant.rs  indexing.rs  mod.rs  tensor.rs
src/fft/: backend.rs  mod.rs  rustfft_backend.rs
src/physics/: coin.rs  hamiltonian.rs  mod.rs  state.rs  walk.rs  walk_1d.rs  walk_2d.rs
src/python/: circulant.rs  error.rs  mod.rs  physics.rs
src/traits/: mod.rs  numeric.rs  ops.rs
src/vision/: filter.rs  kernel.rs  mod.rs
src/visualize/: heatmap.rs  mod.rs  quantum.rs
tests/: core_tests.rs  physics_tests.rs  property_tests.rs  tensor_property_tests.rs
