[package]
name = "circulant-rs"
version = "0.2.0"
edition = "2021"
description = "High-performance block-circulant matrix operations using FFT"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["fft", "circulant", "matrix", "quantum", "physics"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = ["std", "physics", "parallel", "serde"]
std = []
physics = []
parallel = ["rayon", "ndarray/rayon"]
serde = ["dep:serde", "dep:bincode", "ndarray/serde", "num-complex/serde"]
vision = []
visualize = ["dep:plotters", "plotters/line_series", "plotters/area_series"]
visualize-svg = ["visualize", "plotters/svg_backend", "plotters/ab_glyph", "plotters/fontconfig-dlopen"]
visualize-bitmap = ["visualize", "plotters/bitmap_backend", "plotters/bitmap_encoder", "plotters/ab_glyph", "plotters/fontconfig-dlopen"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
rustfft = "6.2"
num-complex = { version = "0.4", features = [] }
num-traits = "0.2"
ndarray = "0.16"
thiserror = "2.0"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
plotters = { version = "0.3", optional = true, default-features = false }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

[dev-dependencies]
approx = "0.5"
proptest = "1.5"
criterion = "0.5"
image = "0.25"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "fft_multiply"
harness = false

[[bench]]
name = "scaling_benchmark"
path = "benches/comparative/scaling_benchmark.rs"
harness = false
